# personal_assistant

./: pyproject.toml  requirements.txt
personal_assistant/: addressbook.py  main_menu.py  notes.py
